--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "friend-finder-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "A friend matching application that uses Node.js and Express",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,5 +21,6 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "path": "^0.12.7"
-  }
+  },
+  "devDependencies": {}
 }
